--- a/style.scss
+++ b/style.scss
@@ -1,14 +1,106 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap');
 
-* { box-sizing: border-box; }
+$primary-color: #22254B;
+$secondary-color: #373B69;
+
+* {
+    box-sizing: border-box;
+}
 
 body {
-    font-family: 'Roboto', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    overflow: hidden;
+    background-color: $primary-color;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
+}
+
+header {
+    padding: 1rem;
+    display: flex;
+    justify-content: flex-end;
+    background-color: $secondary-color;
+}
+
+.search {
+    background-color: transparent;
+    border: 2px solid $primary-color;
+    border-radius: 50px;
+    font-family: inherit;
+    font-size: 1 rem;
+    padding: 0.5rem, 1 rem;
+    color: #FFF;
+
+    &::placeholder {
+        color: #7378c5;
+    }
+
+    &:focus {
+        background-color: $primary-color;
+    }
+}
+
+main {
+    display: flex;
+    flex-wrap: wrap;
+
+    .movie {
+        width: 300px;
+        margin: 1rem;
+        background-color: $secondary-color;
+        box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
+        position: relative;
+        overflow: hidden;
+        border-radius: 3px;
+
+        &__image {
+            width: 100%;
+        }
+
+        &__info {
+            color: #eee;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 0.5rem 1rem 1rem;
+            letter-spacing: 0.5px;
+
+            & h3 {
+                margin-top: 0;
+            }
+        }
+
+        &__value {
+            background-color: $primary-color;
+            padding: 0.25rem 0.5rem;
+            border-radius: 3px;
+            font-weight: bold;
+
+            &--green {
+                color: lightgreen;
+            }
+
+            &--orange {
+                color: orange;
+            }
+
+            &--red {
+                color: red;
+            }
+        }
+
+        &__overview {
+            background-color: #FFF;
+            padding: 2rem;
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            max-height: 100%;
+            transform: translateY(100%);
+            transition: transform 0.3s ease-in;
+        }
+
+        &:hover .movie__overview {
+            transform: translateY(0);
+        }
+    }
 }
